test/banana/typeck/should_fail/component_unkown_param_in_arg.banana
a = IPTablesSource(sleep=0.01, test="foobar")
# RAISE BananaComponentTooManyParams